apps/unifi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      containers:
      - name: unifi
        image: lscr.io/linuxserver/unifi-network-application:10.6.101
        ports:
        - containerPort: 8443
          name: web-ui
          protocol: TCP
        - containerPort: 3478
          name: stun
          protocol: UDP
        - containerPort: 10001
          name: discovery
          protocol: UDP
        - containerPort: 8080
          name: device-comm
          protocol: TCP
        - containerPort: 1900
          name: upnp
          protocol: UDP
        - containerPort: 8843
          name: https-redirect
          protocol: TCP
        - containerPort: 8880
          name: http-redirect
          protocol: TCP
        - containerPort: 6789
          name: speed-test
          protocol: TCP
        - containerPort: 5514
          name: syslog
          protocol: UDP
        volumeMounts:
        - name: unifi-config
          mountPath: /config
      volumes:
      - name: unifi-config
        persistentVolumeClaim:
          claimName: unifi-config-longhorn
