apps/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  annotations:
    metallb.io/loadBalancerIPs: 192.168.0.243
spec:
  type: LoadBalancer
  selector:
    app: unifi
  ports:
  - port: 8443
    targetPort: 8443
    name: web-ui
    protocol: TCP
  - port: 3478
    targetPort: 3478
    name: stun
    protocol: UDP
  - port: 10001
    targetPort: 10001
    name: discovery
    protocol: UDP
  - port: 8080
    targetPort: 8080
    name: device-comm
    protocol: TCP
  - port: 1900
    targetPort: 1900
    name: upnp
    protocol: UDP
  - port: 8843
    targetPort: 8843
    name: https-redirect
    protocol: TCP
  - port: 8880
    targetPort: 8880
    name: http-redirect
    protocol: TCP
  - port: 6789
    targetPort: 6789
    name: speed-test
    protocol: TCP
  - port: 5514
    targetPort: 5514
    name: syslog
    protocol: UDP
