apps/unifi/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.theorangeserver.net`)
      kind: Rule
      services:
        - name: unifi
          port: 8443
          scheme: https
  tls:
    certResolver: letsencrypt
